# ccmat

./: Cargo.toml
.github/workflows/: ci.yml
ccmat-babel/: Cargo.toml
ccmat-babel/assets/: benz.xyz  sio2.xyz
ccmat-babel/src/: lib.rs
ccmat-core/src/: atomic.rs  lib.rs  math.rs  moyo_wrapper.rs  structure.rs  symmetry.rs
ccmat-core/tests/build_crystal/: ?fail_invalid_frac_coord.rs
ccmat-kspace/: Cargo.toml
ccmat-kspace/src/: lib.rs  main.rs  path.rs
ccmat-macros/: Cargo.toml
ccmat-macros/src/: lib.rs
ccmat-macros/tests/: test_macros.rs
ccmat-symmetry/: Cargo.toml
ccmat-symmetry/src/: lib.rs  moyo_wrapper.rs  symmetry.rs
ccmat/src/: main.rs
