[workspace]
resolver = "3"
members = [ 
    "ccmat",
    "ccmat-core", 
    "ccmat-kspace", 
    "ccmat-macros", 
    "ccmat-symmetry", 
    "ccmat-babel",
]

[workspace.package]
version = "0.1.0"
description = "blob for every crates relate to ccmat utils, and crates."
edition = "2021"
authors = ["Jusong Yu <jusong.d.yu@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ccmat-lab/ccmat"
homepage = "https://github.com/ccmat-lab/ccmat"
license = "MIT OR Apache-2.0"
keywords = ["science", "crystar", "material", "molecule"]
exclude = [
    "misc/*",
    "python/*",
]
