[package]
name = "ccmat-babel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
ccmat-core = { path="../ccmat-core" }
# extxyz = { git = "https://github.com/extxyz/extxyz-ng/", version = "0.1.0", branch = "api-rust-extxyz" }
extxyz = { path ="../../extxyz-ng/extxyz/" }

