[package]
name = "ccmat-kspace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
moyo = "0.7.1"
ccmat-core = { path="../ccmat-core" }
ccmat-symmetry = { path="../ccmat-symmetry" }
evalexpr = "12.0.3"
tracing = "0.1.41"

[dev-dependencies]
tracing-test = "0.2.5"
