[package]
name = "ccmat-macros"
version.workspace = true
description.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
exclude.workspace = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.41"
syn = { version = "2.0.108", features = ["visit-mut"] }

[dev-dependencies]
trybuild = "1.0.113"

[lib]
proc-macro = true
