[package]
name = "ccmat-symmetry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
moyo = "0.7.1"
nalgebra = "0.34.1"
ccmat-core = { path = "../ccmat-core" }

